--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+aiosmtplib==3.0.2
+alembic==1.16.5
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
@@ -26,6 +28,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
+Mako==1.3.10
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
@@ -39,10 +42,10 @@ pillow==11.3.0
 protobuf==6.32.1
 pyarrow==21.0.0
 pyasn1==0.6.1
-pydantic==2.9.2
+pydantic==2.11.9
 pydantic-extra-types==2.10.5
 pydantic-settings==2.10.1
-pydantic_core==2.23.4
+pydantic_core==2.33.2
 pydeck==0.9.1
 Pygments==2.19.2
 python-dateutil==2.9.0.post0
@@ -67,6 +70,7 @@ SQLAlchemy==2.0.43
 starlette==0.38.6
 tenacity==9.1.2
 toml==0.10.2
+tomli==2.2.1
 tornado==6.5.2
 typer==0.17.3
 typing-inspection==0.4.1
