--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,24 +5,21 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./data:/app/data
-      - ./app/templates:/app/app/templates
-      - ./app/static:/app/app/static
+      - ./data:/app/data                # persist entire data folder
+      - ./app/templates:/app/app/templates   # hot-reload templates
+      - ./app/static:/app/app/static         # static files
     env_file:
       - .env
     restart: unless-stopped
     networks:
       - bajeti-net
-    command: >
-      bash -c "
-        alembic upgrade head &&
-        uvicorn app.main:app --host 0.0.0.0 --port 8000"
     
+  # Cloudflare tunnel
   cloudflared:
     image: cloudflare/cloudflared:latest
     container_name: cloudflared
     restart: unless-stopped
-    user: "0"
+    user: "0"  # run as root so it can read certs
     command: tunnel --config /root/.cloudflared/config.yml run bajeti
     volumes:
       - ./cloudflared:/root/.cloudflared
