--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     types: [closed]
     branches:
       - main
-  workflow_dispatch:  # optional manual trigger
+  workflow_dispatch:
 
 jobs:
   build-and-deploy:
