--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Raspberry Pi
+name: Deploy to Raspberry Pi (Local Build)
 
 on:
   pull_request:
@@ -8,47 +8,26 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  deploy:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up QEMU (for ARM builds)
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: arm64
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and Push bajeti_app image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          tags: ghcr.io/${{ github.repository_owner }}/bajeti_app:latest
-          platforms: linux/arm64
-
-      - name: SSH into Raspberry Pi and update bajeti_app
+      - name: SSH into Raspberry Pi and deploy
         uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ secrets.PI_HOST }}
           username: ${{ secrets.PI_USER }}
           key: ${{ secrets.PI_SSH_KEY }}
           script: |
+            set -e
             cd /home/${{ secrets.PI_USER }}/bajeti
 
-            echo "📦 Writing .env file..."
+            echo "🌍 Pulling latest code from main..."
+            git fetch origin main
+            git reset --hard origin/main
+
+            echo "📦 Updating environment variables..."
             cat <<EOF > .env
             SECRET_KEY=${{ secrets.SECRET_KEY }}
             ALGORITHM=${{ secrets.ALGORITHM }}
@@ -58,11 +37,13 @@ jobs:
             ENVIRONMENT=${{ secrets.ENVIRONMENT }}
             EOF
 
-            echo "🚀 Pulling latest bajeti_app image..."
-            docker compose pull bajeti_app
+            echo "🐳 Building Docker image locally..."
+            docker compose build bajeti_app
 
-            echo "🔁 Recreating bajeti_app container..."
+            echo "🚀 Recreating container..."
             docker compose up -d bajeti_app
 
-            echo "🧹 Cleaning up unused Docker images..."
+            echo "🧹 Cleaning old images..."
             docker image prune -f
+
+            echo "✅ Deployment complete!"
