--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ app/static/dist/
 # app/static/fonts/
 # app/static/vendor/
 
+# Only ignore built files if you had them
+
 # Cloudflared secrets (ignore cert + tunnel credentials, but not config.yml)
 cloudflared/cert.pem
 cloudflared/*.json
