--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,15 @@
 name: Deploy on Raspberry Pi
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+  pull_request:
+    branches: [ main ]
+    types: [closed]  # Only trigger when PR is closed
+  workflow_dispatch:   # Manual trigger
 
 jobs:
   deploy:
+    # Only deploy if the PR was actually merged (not just closed)
+    if: github.event.pull_request.merged == true
     runs-on: self-hosted
 
     steps:
