--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -18,4 +18,5 @@ COPY . .
 EXPOSE 8000
 
 # Run uvicorn for dev
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+COPY start.sh .
+CMD ["./start.sh"]
