--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -21,3 +21,6 @@ python-dotenv==1.1.1
 # Data Validation
 pydantic==2.11.9
 pydantic-settings==2.10.1
+
+# Testing (Development only - optional)
+pytest==8.4.2
