--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,12 +1,14 @@
 FROM python:3.11-slim
 WORKDIR /app
 
+ENV PYTHONPATH="/app"
+
 # Install dependencies
 RUN apt-get update && apt-get install -y nodejs npm && rm -rf /var/lib/apt/lists/*
 
-COPY requirements.txt .
+COPY requirements-dev.txt .
 
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements-dev.txt
 
 # Install esbuild for bundling
 RUN npm install -g esbuild
